--- a/templates/nomad-server.hcl.j2
+++ b/templates/nomad-server.hcl.j2
@@ -10,5 +10,5 @@ server {
         token = "{{ consul_encrypt_key }}"
     }
     enabled = true
-    start_join = ["hq-mgmt-bootstrap-1.int.products.bulletproof.net:4648"]
+    start_join = [{% for host in groups['nomad-boostrap'] %}"{{ hostvars[host]['inventory_hostname']}}"{% if not loop.last %},{% endif %}{% endfor %}]
 }
